image tgw http get passed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username= testuser
 spring.datasource.password= testpassword
+#spring.security.user.name=test
+#spring.security.user.password=test
