remove default security login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username= testuser
 spring.datasource.password= testpassword
 spring.security.user.name=test
 spring.security.user.password=test
+
+#wizapp.app.jwtSecret= testJwtSecret
+#wizapp.app.jwtExpirationMs= 10000000
