signup passed, pending jwt token problem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username= testuser
-spring.datasource.password= testpassword
-spring.security.user.name=test
-spring.security.user.password=test
+#spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username= testuser
+#spring.datasource.password= testpassword
 
-#wizapp.app.jwtSecret= testJwtSecret
-#wizapp.app.jwtExpirationMs= 10000000
+spring.datasource.url= jdbc:postgresql://localhost:5432/testdb2
+spring.datasource.username= testuser2
+spring.datasource.password= 88888888
+
+#spring.security.user.name=test
+#spring.security.user.password=test
+
+wizapp.booru4diffusion.jwtSecret= testJwtSecret
+wizapp.booru4diffusion.jwtExpirationMs= 10000000
