--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             <version>0.9.1</version>
         </dependency>
         <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>link.wizapp</groupId>
             <artifactId>Booru4Diffusion</artifactId>
             <version>0.0.1-SNAPSHOT</version>
